# PRDMA

./: README.md
pRDMA/: CMakeLists.txt
pRDMA/include/: dhmp.h  dhmp_config.h  dhmp_dev.h  dhmp_hash.h  dhmp_transport.h
pRDMA/src/: CMakeLists.txt  dhmp_client.c  dhmp_client.c.back  dhmp_context.c  dhmp_dev.c  dhmp_hash.c  dhmp_log.c  dhmp_server.c  dhmp_transport.c  dhmp_work.c
pRDMA/test/: .client.c.swp  CMakeLists.txt  client.c  client_5.back  client_95.back  client_95.c  client_unif.back  client_unif.c  client_unif.normal  client_unif.tail  diffic_allwrite_dhmp_cu.c  easy_dram.c  mul_client.c  single_client.c  word.c  ycsb.c
pRDMA_client/: CMakeLists.txt
pRDMA_client/include/: dhmp.h  dhmp_client.h  dhmp_server.h  dhmp_task.h  dhmp_transport.h  dhmp_work.h
pRDMA_client/src/: dhmp_client.c  dhmp_config.c  dhmp_log.c  dhmp_timerfd.c  dhmp_transport.c  dhmp_work.c
pRDMA_client/stress/: READ.ME  cpu.c  cpu_client
pRDMA_client/test/: CMakeLists.txt  client.c  dblp.c  enron.c  single_client.c  word.c  ycsb.c
pRDMA_server/: CMakeLists.txt
pRDMA_server/include/: dhmp.h  dhmp_client.h  dhmp_context.h  dhmp_log.h  dhmp_server.h  dhmp_timerfd.h  dhmp_work.h
pRDMA_server/src/: dhmp_client.c  dhmp_config.c  dhmp_server.c  dhmp_task.c  dhmp_transport.c  dhmp_work.c
pRDMA_server/stress/: READ.ME  cpu_server
pRDMA_server/test/: CMakeLists.txt  server.c
